--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -5,6 +5,37 @@
   padding-bottom: 20px;
 }
 
+.main-title {
+  font-size: 32px;
+}
+
+.bigger-titles {
+  font-size: 28px;
+  margin-bottom: 50px;
+}
+
+#skills div div div h2 {
+  margin-bottom: 30px;
+}
+
+.paragraph-about {
+  font-size: 18px;
+}
+
+@media (min-width: 768px) {
+  .main-title {
+    font-size: 50px;
+  }
+
+  .bigger-titles {
+    font-size: 38px;
+  }
+
+  .paragraph-about {
+    font-size: 22px;
+  }
+}
+
 /* skills */
 .progress-wrapper {
   height: 130px;
@@ -58,7 +89,7 @@
   border: 2px solid #f9f9f9;
 
   img {
-    transition: .3s ease;
+    transition: .35s ease-out;
   }
 
   &:hover {
@@ -79,10 +110,10 @@
   border-radius: inherit;
   top: 0;
   left: 0;
-  background: rgba($color: $black, $alpha: .3);
+  background: rgba($color: $black, $alpha: .45);
   opacity: 0;
   visibility: hidden;
-  transition: .3s ease;
+  transition: .35s ease-out;
 }
 
 .hover-content {
@@ -92,6 +123,30 @@
   left: 0;
   right: 0;
   text-align: center;
+}
+
+.project-paragraph {
+  color: white;
+  font-weight: 400;
+  font-size: 1.08em;
+  padding: 8px 28px;
+}
+
+.project-paragraph-h {
+  font-weight: 700;
+  font-size: 1.35em;
+  color: white;
+  margin-bottom: 8px;
+}
+
+.no-show-para {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .no-show-para {
+    display: block;
+  }
 }
 
 /* /portfolio */
