new project illustrations and bug fixes

--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -8,6 +8,13 @@ body {
   color: $white;
 }
 
+.anchor {
+  display: block;
+  position: relative;
+  top: -90px;
+  visibility: hidden;
+}
+
 /* preloader */
 
 .preloader {
