--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,13 @@ body {
   color: #fff;
 }
 
+.anchor {
+  display: block;
+  position: relative;
+  top: -90px;
+  visibility: hidden;
+}
+
 /* preloader */
 .preloader {
   position: fixed;
@@ -505,10 +512,10 @@ textarea.form-control {
 
 .bigger-titles {
   font-size: 28px;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
 }
 
-#skills div div div h2 {
+.skills div div div h2 {
   margin-bottom: 30px;
 }
 
@@ -547,7 +554,7 @@ textarea.form-control {
   height: 800px;
   bottom: 0;
   left: 50%;
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: rgba(255, 255, 255, 0.2);
   border-radius: 45%;
   transform: translateX(-50%) rotate(0);
   animation: rotate 6s linear infinite;
@@ -590,7 +597,7 @@ textarea.form-control {
   border-radius: inherit;
   top: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.45);
+  background: rgba(0, 0, 0, 0.6);
   opacity: 0;
   visibility: hidden;
   transition: 0.35s ease-out;
@@ -613,7 +620,7 @@ textarea.form-control {
 }
 
 .project-paragraph-h {
-  font-weight: 700;
+  font-weight: 800;
   font-size: 1.35em;
   color: white;
   margin-bottom: 8px;
