--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -90,10 +90,12 @@
 
   img {
     transition: .35s ease-out;
+    transform: scale(1.22);
   }
 
   &:hover {
     img {
+      transform: scale(1.05);
     }
 
     .hover-overlay {
@@ -133,10 +135,11 @@
 }
 
 .project-paragraph-h {
-  font-weight: 800;
-  font-size: 1.35em;
+  font-weight: 600;
+  font-size: 1.24em;
   color: white;
-  margin-bottom: 8px;
+  margin-top: 15px;
+  margin-bottom: 30px;
 }
 
 .no-show-para {
@@ -146,6 +149,13 @@
 @media (min-width: 768px) {
   .no-show-para {
     display: block;
+  }
+
+  .project-paragraph-h {
+    font-size: 1.4em;
+    font-weight: 900;
+    margin-top: 0;
+    margin-bottom: 8px;
   }
 }
 
@@ -176,7 +186,11 @@
 }
 
 .footer-s {
-  padding: 60px 0 30px;
+  padding: 60px 0 60px;
+}
+
+.footer-cont {
+  height: 60px;
 }
 
 /* /footer */
