fixed button bug

--- a/css/style.css
+++ b/css/style.css
@@ -969,6 +969,12 @@ textarea.form-control {
   text-align: center;
 }
 
+.project-button {
+  font-size: 12px;
+  padding: 6px 22px;
+  margin: 0 4px 6px;
+}
+
 .project-paragraph {
   color: white;
   font-weight: 400;
@@ -976,12 +982,12 @@ textarea.form-control {
   padding: 8px 28px;
 }
 
-.project-paragraph-h {
-  font-weight: 600;
-  font-size: 1.24em;
+.project-parag-h {
   color: white;
-  margin-top: 15px;
-  margin-bottom: 30px;
+  font-weight: 600;
+  font-size: 13px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .no-show-para {
@@ -993,7 +999,13 @@ textarea.form-control {
     display: block;
   }
 
-  .project-paragraph-h {
+  .project-button {
+    font-size: 15px;
+    padding: 10px 30px;
+    margin: 0 4px 16px;
+  }
+
+  .project-parag-h {
     font-size: 1.4em;
     font-weight: 900;
     margin-top: 0;
