--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -127,6 +127,12 @@
   text-align: center;
 }
 
+.project-button {
+  font-size: 12px;
+  padding: 6px 22px;
+  margin: 0 4px 6px;
+}
+
 .project-paragraph {
   color: white;
   font-weight: 400;
@@ -134,12 +140,12 @@
   padding: 8px 28px;
 }
 
-.project-paragraph-h {
-  font-weight: 600;
-  font-size: 1.24em;
+.project-parag-h {
   color: white;
-  margin-top: 15px;
-  margin-bottom: 30px;
+  font-weight: 600;
+  font-size: 13px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .no-show-para {
@@ -151,7 +157,13 @@
     display: block;
   }
 
-  .project-paragraph-h {
+  .project-button {
+    font-size: 15px;
+    padding: 10px 30px;
+    margin: 0 4px 16px;
+  }
+
+  .project-parag-h {
     font-size: 1.4em;
     font-weight: 900;
     margin-top: 0;
